--- a/index-dev.html
+++ b/index-dev.html
@@ -336,33 +336,27 @@
           <line x1="20" y1="783" x2="20" y2="980"></line>
           <circle target="workDetailsFifth" cx="20" cy="990" r="10"></circle>
           <line x1="20" y1="1003" x2="20" y2="1200"></line>
+          <circle target="workDetailsSixth" cx="20" cy="1210" r="10"></circle>
+          <line x1="20" y1="1223" x2="20" y2="1420"></line>
         </svg>
       </div>
       <div class="customTooltip customTooltipFirst">
         <div class="customTip"></div>
         <div class="details">
-          <div class="designation">Bachelor Of Engineering</div>
-          <div class="company"><a href="http://www.nsit.ac.in/" target="new">Netaji Subhas Institute Of Technology</a></div>
-          <div class="time-period">Aug'13 - Aug'18</div>
+          <div class="designation">Senior Software Engineer (Fullstack)</div>
+          <div class="company"><a href="https://harness.io/" target="new">Harness</a></div>
+          <div class="time-period">Feb'21 - Current</div>
         </div>
       </div>
       <div class="customTooltip customTooltipSecond">
         <div class="customTip"></div>
         <div class="details">
-          <div class="designation">Frontend Developer Intern</div>
-          <div class="company"><a href="http://www.vidyamandir.com/index.html" target="new">Vidyamandir Classes</a></div>
-          <div class="time-period">Oct'17</div>
+          <div class="designation">Software Engineer 2</div>
+          <div class="company"><a href="https://www.sumologic.com/" target="new">Sumo Logic</a></div>
+          <div class="time-period">June'18 - Feb'21</div>
         </div>
       </div>
       <div class="customTooltip customTooltipThird">
-        <div class="customTip"></div>
-        <div class="details">
-          <div class="designation">Software Developer Intern</div>
-          <div class="company"><a href="https://www.viraltag.com/" target="new">Viraltag</a></div>
-          <div class="time-period">Dec'17 - Feb'18</div>
-        </div>
-      </div>
-      <div class="customTooltip customTooltipFourth">
         <div class="customTip"></div>
         <div class="details">
           <div class="designation">Software Engineer</div>
@@ -370,12 +364,28 @@
           <div class="time-period">June'17 - June'18</div>
         </div>
       </div>
+      <div class="customTooltip customTooltipFourth">
+        <div class="customTip"></div>
+        <div class="details">
+          <div class="designation">Software Developer Intern</div>
+          <div class="company"><a href="https://www.viraltag.com/" target="new">Viraltag</a></div>
+          <div class="time-period">Dec'17 - Feb'18</div>
+        </div>
+      </div>
       <div class="customTooltip customTooltipFifth">
+        <div class="customTip"></div>
+        <div class="details">
+          <div class="designation">Frontend Developer Intern</div>
+          <div class="company"><a href="http://www.vidyamandir.com/index.html" target="new">Vidyamandir Classes</a></div>
+          <div class="time-period">Oct'17</div>
+        </div>
+      </div>
+      <div class="customTooltip customTooltipSixth">
           <div class="customTip"></div>
           <div class="details">
-            <div class="designation">Software Engineer 2</div>
-            <div class="company"><a href="https://www.sumologic.com/" target="new">Sumo Logic</a></div>
-            <div class="time-period">June'18 - Current</div>
+            <div class="designation">Bachelor Of Engineering</div>
+            <div class="company"><a href="http://www.nsit.ac.in/" target="new">Netaji Subhas Institute Of Technology</a></div>
+            <div class="time-period">Aug'13 - Aug'18</div>
           </div>
       </div>
   </div>
