--- a/index-dev.html
+++ b/index-dev.html
@@ -76,6 +76,12 @@
               <div class="skill-progress" data-progress="80"></div>
             </div>
             <div class="skill-item-container">
+              <div class="skill-name">
+                Typescript
+              </div>
+              <div class="skill-progress" data-progress="80"></div>
+            </div>
+            <div class="skill-item-container">
                 <div class="skill-name">
                   React
                 </div>
@@ -86,12 +92,6 @@
                   Redux
                 </div>
                 <div class="skill-progress" data-progress="70"></div>
-            </div>
-            <div class="skill-item-container">
-                <div class="skill-name">
-                  RxJS
-                </div>
-                <div class="skill-progress" data-progress="50"></div>
             </div>
             <div class="skill-item-container">
                 <div class="skill-name">
@@ -122,11 +122,17 @@
                 <div class="skill-name">
                   NodeJS
                 </div>
-                <div class="skill-progress" data-progress="70"></div>
+                <div class="skill-progress" data-progress="80"></div>
               </div>
               <div class="skill-item-container">
                   <div class="skill-name">
-                    Django
+                    C++
+                  </div>
+                  <div class="skill-progress" data-progress="70"></div>
+              </div>
+              <div class="skill-item-container">
+                  <div class="skill-name">
+                    Java
                   </div>
                   <div class="skill-progress" data-progress="60"></div>
               </div>
@@ -338,17 +344,37 @@
           <line x1="20" y1="1003" x2="20" y2="1200"></line>
           <circle target="workDetailsSixth" cx="20" cy="1210" r="10"></circle>
           <line x1="20" y1="1223" x2="20" y2="1420"></line>
+          <circle target="workDetailsSixth" cx="20" cy="1430" r="10"></circle>
+          <line x1="20" y1="1443" x2="20" y2="1640"></line>
+          <circle target="workDetailsSixth" cx="20" cy="1650" r="10"></circle>
+          <line x1="20" y1="1663" x2="20" y2="1860"></line>
         </svg>
       </div>
       <div class="customTooltip customTooltipFirst">
         <div class="customTip"></div>
         <div class="details">
           <div class="designation">Senior Software Engineer (Fullstack)</div>
-          <div class="company"><a href="https://harness.io/" target="new">Harness</a></div>
-          <div class="time-period">Feb'21 - Current</div>
+          <div class="company"><a href="https://www.booking.com/" target="new">Booking.com</a></div>
+          <div class="time-period">Jan'23 - Current</div>
         </div>
       </div>
       <div class="customTooltip customTooltipSecond">
+        <div class="customTip"></div>
+        <div class="details">
+          <div class="designation">Senior Software Engineer (Fullstack)</div>
+          <div class="company"><a href="https://www.babylonhealth.com/" target="new">Babylon Health</a></div>
+          <div class="time-period">Dec'21 - Jan'23</div>
+        </div>
+      </div>
+      <div class="customTooltip customTooltipThird">
+        <div class="customTip"></div>
+        <div class="details">
+          <div class="designation">Senior Software Engineer (Fullstack)</div>
+          <div class="company"><a href="https://harness.io/" target="new">Harness</a></div>
+          <div class="time-period">Feb'21 - Dec'21</div>
+        </div>
+      </div>
+      <div class="customTooltip customTooltipFourth">
         <div class="customTip"></div>
         <div class="details">
           <div class="designation">Software Engineer 2</div>
@@ -356,7 +382,7 @@
           <div class="time-period">June'18 - Feb'21</div>
         </div>
       </div>
-      <div class="customTooltip customTooltipThird">
+      <div class="customTooltip customTooltipFifth">
         <div class="customTip"></div>
         <div class="details">
           <div class="designation">Software Engineer</div>
@@ -364,30 +390,30 @@
           <div class="time-period">June'17 - June'18</div>
         </div>
       </div>
-      <div class="customTooltip customTooltipFourth">
-        <div class="customTip"></div>
-        <div class="details">
-          <div class="designation">Software Developer Intern</div>
-          <div class="company"><a href="https://www.viraltag.com/" target="new">Viraltag</a></div>
-          <div class="time-period">Dec'17 - Feb'18</div>
-        </div>
-      </div>
-      <div class="customTooltip customTooltipFifth">
-        <div class="customTip"></div>
-        <div class="details">
-          <div class="designation">Frontend Developer Intern</div>
-          <div class="company"><a href="http://www.vidyamandir.com/index.html" target="new">Vidyamandir Classes</a></div>
-          <div class="time-period">Oct'17</div>
-        </div>
-      </div>
       <div class="customTooltip customTooltipSixth">
           <div class="customTip"></div>
           <div class="details">
-            <div class="designation">Bachelor Of Engineering</div>
-            <div class="company"><a href="http://www.nsit.ac.in/" target="new">Netaji Subhas Institute Of Technology</a></div>
-            <div class="time-period">Aug'13 - Aug'18</div>
+            <div class="designation">Software Developer Intern</div>
+            <div class="company"><a href="https://www.viraltag.com/" target="new">Viraltag</a></div>
+            <div class="time-period">Dec'17 - Feb'18</div>
           </div>
       </div>
+      <div class="customTooltip customTooltipSeventh">
+          <div class="customTip"></div>
+          <div class="details">
+            <div class="designation">Frontend Developer Intern</div>
+            <div class="company"><a href="http://www.vidyamandir.com/index.html" target="new">Vidyamandir Classes</a></div>
+            <div class="time-period">Oct'17</div>
+          </div>
+      </div>
+      <div class="customTooltip customTooltipEigth">
+        <div class="customTip"></div>
+        <div class="details">
+          <div class="designation">Bachelor Of Engineering</div>
+          <div class="company"><a href="http://www.nsit.ac.in/" target="new">Netaji Subhas Institute Of Technology</a></div>
+          <div class="time-period">Aug'13 - Aug'18</div>
+        </div>
+    </div>
   </div>
   <div id="resume-section">
     <div id="resume-header">
